--- a/source/_posts/后端自动化配置.md
+++ b/source/_posts/后端自动化配置.md
@@ -10,3 +10,11 @@ jenkins/jenkins
 
 [在CentOS 7上搭建 Jenkins + Maven + Git 持续集成环境](https://segmentfault.com/a/1190000017741598)
 [jenkins+maven+docker+github全自动化部署SpringBoot实例](https://segmentfault.com/a/1190000014325300)
+[Maven属性（properties）标签的使用](https://www.cnblogs.com/EasonJim/p/6815365.html)
+
+
+人像采集系统功能规划及研发:
+1.证件照信息模块/手动匹配模块/证件照扫描模块/证件照质检模块等,并对接微信小程序,提供微信小程序所需的相关接口，
+规划及指导微信小程序的功能规范及研发
+
+后端开发接触时间较短,尚需努力提升
