--- a/source/_posts/博主.md
+++ b/source/_posts/博主.md
@@ -1,1 +1,2 @@
-[阿童木-atom ](https://blog.csdn.net/zhaojianting/article/details/103502634)
+[阿童木-atom](https://blog.csdn.net/zhaojianting/article/details/103502634)
+[听风是风](https://www.cnblogs.com/echolun/p/12178655.html) -JS
